# ADBWrenchTUI

./: CLAUDE.md  Cargo.toml  README.md  build-all.sh  build.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  main.rs  theme.rs  tui.rs
src/adb/: client.rs  device.rs  mod.rs  parser.rs  types.rs
src/components/: mod.rs
src/ui/: about.rs  apps.rs  bugreport.rs  controls.rs  dashboard.rs  files.rs  logcat.rs  mod.rs  performance.rs  screen.rs  settings.rs  shell.rs  sidebar.rs
