[package]
name = "adbwrenchtui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for ADB Wrench - Android debugging tool"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/SuperrAI/ADBWrenchTUI"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# ADB interaction
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging (for debug, not visible in TUI)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Image preview in terminal
ratatui-image = { version = "9.0", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"

# Utilities
unicode-width = "0.2"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
